--- a/src/views/style.css
+++ b/src/views/style.css
@@ -18,7 +18,7 @@ header{
 .content {
     height: 100%;
     overflow: hidden;
-    padding:25px 0 16px 0; /* Header height and footer height */
+    padding:30px 0 16px 0; /* Header height and footer height */
     margin:0 auto 0 auto; /* Center content */
     box-sizing:border-box;
 }
@@ -33,7 +33,7 @@ header{
 
 footer {
     width: 100%;
-    background-color: #7d919a;
+    background-color: #5b3182;
     color: white;
     position: fixed; 
     bottom: 0;
@@ -41,7 +41,9 @@ footer {
     line-height: 16px;
 }
 
-
+.color-red {
+    color: red;
+}
 
 
 .drag {
@@ -113,3 +115,17 @@ footer {
     display: inline-block;
 }
 /* xxxxxx FIM ROTACAO ICONES xxxxxx */
+
+.content {
+    background: #444;
+    color: #eee;
+}
+
+.form-control {
+    background: black;
+    color: white;
+}
+
+.lh-30 {
+    line-height: 30px;
+}
